# pre-commit-conventional-commits

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
pre_commit_conventional_commits/: hook.py
tests/: test_hook.py
tests/commit_messages/: bad_commit_message  conventional_commit_message  custom_commit_message
